# mailio

./: CMakeLists.txt
.github/workflows/: mayhem.yml
fuzz/: CMakeLists.txt  fuzz_base64_decode.cpp  fuzz_base64_encode.cpp  fuzz_bit7_decode.cpp  fuzz_bit7_encode.cpp  fuzz_mime.cpp  fuzz_quoted_printable_decode.cpp  fuzz_quoted_printable_encode.cpp
include/mailio/: imap.hpp
mayhem/: Dockerfile  fuzz_base64_decode.Mayhemfile  fuzz_base64_encode.Mayhemfile  fuzz_bit7_decode.Mayhemfile  fuzz_bit7_encode.Mayhemfile  fuzz_mime.Mayhemfile  fuzz_quoted_printable_decode.Mayhemfile  fuzz_quoted_printable_encode.Mayhemfile
src/: imap.cpp  message.cpp
